Copy changes for testing
Copy changes to P1, P2 and P3

--- a/app/views/citizen-truelayer/bank-success.html
+++ b/app/views/citizen-truelayer/bank-success.html
@@ -25,7 +25,7 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            You have succesfully shared your account information
+            You have successfully shared your account information
           </h2>
 
           <p class="govuk-body">We have downloaded 3 months of your transaction history. You can use this to tell us more about your financial situation.</p>
