--- a/app/views/citizen-truelayer/dwpdetails.html
+++ b/app/views/citizen-truelayer/dwpdetails.html
@@ -21,11 +21,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Enter your tax and benefits details
+          Enter your National Insurance number and date of birth
         </h1>
 
-        <p class="govuk-body">We will contact the Department for Work and Pensions to check if you are getting benefits.</p>
-
+        <p class="govuk-body">We will contact the Department for Work and Pensions (DWP) and HM Revenue and Customs (HMRC) to check your tax and benefits status.</p>
+        <br>
         <form class="form" action="ob-consent" method="get">
 
           <label class="govuk-c-label" for="national-insurance-number">
