--- a/app/views/solicitor/benefits-result.html
+++ b/app/views/solicitor/benefits-result.html
@@ -37,14 +37,18 @@
           </h2>
 
         </div>
+        <h3>Your client's tax and benefits status</h3>
+                <br>
+        <p class="govuk-body">
+        Your client does not receive benefits that qualify for legal aid.</p>
+        <p class="govuk-body">
+        Your client's gross income is under £2,657.00 a month</p>
 
         <h3>What to do next</h3>
         <br>
         <p class="govuk-body">
-        Your client is not receiving any benefits that qualify for legal aid. They will have to complete a financial means assessment.</p>
-        <p class="govuk-body">
-        Your client can complete the financial assessment online from home or another location.
-        </p>
+        Your client will have to complete a financial means assessment. They can complete the financial assessment online from home or another location.</p>
+
 
           <form class="form" action="online-banking" method="post">
 
