--- a/app/views/solicitor/declared-evidence.html
+++ b/app/views/solicitor/declared-evidence.html
@@ -447,7 +447,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Your client needs to provide evidence for the following 
+          Your client needs to provide the following evidence
         </h2>
 
         <ol class="task-list">
