--- a/app/views/solicitor/review-income.html
+++ b/app/views/solicitor/review-income.html
@@ -30,13 +30,14 @@
 
           <div class="govuk-c-error-summary govuk-o-grid__item--two-thirds" aria-labelledby="error-summary-title" role="alert">
             <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
-              <li>Review your client's declarations and amend as necessary.</li>
+              <li>Review your client's declarations and change as necessary.</li>
             </ul>
           </div>
 
           </br>
+          <br>
           <h2 class="govuk-heading-m">
-            Income (selected by your client)
+            Your client declared the following as income
           </h2>
 
           <div>
@@ -71,7 +72,7 @@
             <br>
 
             <h2 class="govuk-heading-m">
-              Other incoming transactions (not selected)
+              Other incoming transactions
             </h2>
 
             <div>
