--- a/app/views/solicitor/review-outgoings.html
+++ b/app/views/solicitor/review-outgoings.html
@@ -65,13 +65,14 @@
 
           <div class="govuk-c-error-summary govuk-o-grid__item--two-thirds" aria-labelledby="error-summary-title" role="alert">
             <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
-              <li>Make sure to review what your client has declared and amend as necessary.</li>
+              <li>Review your client's declarations and change as necessary.</li>
             </ul>
           </div>
 
           </br>
+          <br>
           <h2 class="govuk-heading-m">
-          Outgoings (selected by your client)
+          Your client declared the following as outgoings
           </h2>
 
           <div>
@@ -106,7 +107,7 @@
             <br>
 
             <h2 class="govuk-heading-m">
-              Other outgoing transactions (not selected)
+              Other outgoing transactions
             </h2>
 
             <div>
@@ -124,181 +125,181 @@
                     <td class="govuk-c-table__cell">09 APR 2018</td>
                     <td class="govuk-c-table__cell">PARKRETAIL.CO.UK</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£550.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">11 APR 2018</td>
                     <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£302.91</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">12 APR 2018</td>
                     <td class="govuk-c-table__cell">ARGOS LTD</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£150.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">21 APR 2018</td>
                     <td class="govuk-c-table__cell">LNK ATM WITHDRAWAL</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£100.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">28 APR 2018</td>
                     <td class="govuk-c-table__cell">LNK ATM WITHDRAWAL</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£100.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">03 APR 2018</td>
                     <td class="govuk-c-table__cell">TALKTALK TELECOM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£46.82</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">27 APR 2018</td>
                     <td class="govuk-c-table__cell">LNK ATM WITHDRAWAL</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£40.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">05 APR 2018</td>
                     <td class="govuk-c-table__cell">TESCO PURCHASE</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£39.99</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">21 APR 2018</td>
                     <td class="govuk-c-table__cell">TESCO MOBILE LTD</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£39.25</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">12 APR 2018</td>
                     <td class="govuk-c-table__cell">PAYPAL WWW.EBAY.COM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£36.59</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">18 APR 2018</td>
                     <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£32.72</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">20 APR 2018</td>
                     <td class="govuk-c-table__cell">LNK ATM WITHDRAWAL</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£30.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">22 APR 2018</td>
                     <td class="govuk-c-table__cell">TESCO EXTRA</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£30.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">29 APR 2018</td>
                     <td class="govuk-c-table__cell">SAINSBURYS</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£23.99</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">01 APR 2018</td>
                     <td class="govuk-c-table__cell">TESCO ONLINE SHOPPING</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£23.62</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">03 APR 2018</td>
                     <td class="govuk-c-table__cell">AA MEMBERSHIP</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£23.11</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">25 APR 2018</td>
                     <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£22.70</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">04 APR 2018</td>
                     <td class="govuk-c-table__cell">MORRISONS PETROL</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£20.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">29 APR 2018</td>
                     <td class="govuk-c-table__cell">LNK ATM WITHDRAWAL</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£20.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">30 APR 2018</td>
                     <td class="govuk-c-table__cell">WWW.METROBANK.COM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£20.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">11 APR 2018</td>
                     <td class="govuk-c-table__cell">AMAZON INT'L</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£17.25</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">17 APR 2018</td>
                     <td class="govuk-c-table__cell">WWW.BINGO.COM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£10.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">05 APR 2018</td>
                     <td class="govuk-c-table__cell">AMAZON PRIME</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7.99</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">17 APR 2018</td>
                     <td class="govuk-c-table__cell">MS JANE DOE TRANSFER</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7.93</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">05 APR 2018</td>
                     <td class="govuk-c-table__cell">PAYPAL WWW.EBAY.COM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7.56</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">07 APR 2018</td>
                     <td class="govuk-c-table__cell">TAILS.COM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£6.37</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">06 APR 2018</td>
                     <td class="govuk-c-table__cell">WWW.ASDA.COM</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£5.11</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">20 APR 2018</td>
                     <td class="govuk-c-table__cell">AMAZON INT'L</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£5.00</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">08 APR 2018</td>
                     <td class="govuk-c-table__cell">GOOGLE PLAY STORE</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2.99</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
                     <td class="govuk-c-table__cell">03 APR 2018</td>
                     <td class="govuk-c-table__cell">E&L INSURANCE</td>
                     <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2.99</td>
-                    <td class="govuk-c-table__cell"><a href="">Change</a></td>
+                    <td class="govuk-c-table__cell"><a href="">Add as outgoing</a></td>
                   </tr>
                 </tbody>
               </table>
