--- a/app/views/citizen-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing.html
@@ -420,11 +420,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Tell us about your outgoings over the last 30 days
+          Outgoings
         </h2>
-        <p class="govuk-body">
-          Add relevant transactions from your bank statement(s).
-        </p>
+
+        <h3 class="govuk-heading-m">
+          Tell us about your outgoings over the last 30 days
+        </h3>
+
+        <p class="govuk-body">We will now list all payments out of your account. Please mark which of these payments fall into the following categories.</p>
 
         <ol class="task-list">
           <li>
@@ -444,8 +447,8 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="#">
-                  Add item
+                <a class="task-name" href="select-council-tax">
+                  Add a transaction
                 </a>
               </li>
             </ul>
@@ -455,13 +458,13 @@
               <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
             </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions 
+              Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions
 
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" href="select-childcare">
-                  Add item
+                <a class="task-name" href="#">
+                  Add a transaction
                 </a>
               </li>
             </ul>
