--- a/app/views/citizen-truelayer/identify-outgoings.html
+++ b/app/views/citizen-truelayer/identify-outgoings.html
@@ -419,11 +419,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Tell us about your outgoings over the last 30 days
+          Outgoings
         </h2>
-        <p class="govuk-body">
-          Add relevant transactions from your bank statement(s).
-        </p>
+
+        <h3 class="govuk-heading-m">
+          Tell us about your outgoings over the last 30 days
+        </h3>
+
+        <p class="govuk-body">We will now list all payments out of your account. Please mark which of these payments fall into the following categories.</p>
 
         <ol class="task-list">
           <li>
@@ -436,7 +439,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="select-housing">
-                        Add item
+                        Add a transaction
                 </a>
               </li>
             </ul>
@@ -451,7 +454,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                        Add a transaction
                 </a>
               </li>
             </ul>
