--- a/app/views/citizen-truelayer/obbank.html
+++ b/app/views/citizen-truelayer/obbank.html
@@ -40,7 +40,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link " href="dwpdetails">Back</a>
-    <p class="govuk-body"></p>
+      <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -54,7 +54,7 @@
               You will be redirected to a secure service to sign in to your online banking.
             </p>
 
-            <p class="govuk-body">You will need to share all of your bank accounts, including any in joint names or with no money. Always keep your password details private.</p>
+            <p class="govuk-body">You will need to share all of your bank accounts, including any in joint names or with no money.</p>
 
 
             <div class="govuk-c-warning-text">
@@ -68,7 +68,6 @@
               <ul class="govuk-list govuk-list--bullet">
                 <li>Sign in and authorise access to your accounts</li>
                 <li>We download 3 months of transactions</li>
-                <li>The bank connection automatically ends after 1 hour</li>
                 <li>Your online banking details are not saved</li>
               </ul>
             </p>
