--- a/app/views/citizen-truelayer/select-council-tax.html
+++ b/app/views/citizen-truelayer/select-council-tax.html
@@ -134,7 +134,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-outgoings">Back</a>
+    <a class="govuk-c-back-link" href="identify-outgoings-with-housing">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -158,16 +158,6 @@
             </tr>
           </thead>
           <tbody class="govuk-c-table__body">
-            <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">RENT</td>
-              <td class="govuk-c-table__cell">03 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
-              <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="outgoings"></label>
-                </div>
-              </td>
-            </tr>
             <tr class="govuk-c-table__row">
               <td class="govuk-c-table__cell">WIGGLY-TOTS NURSERY</td>
               <td class="govuk-c-table__cell">03 APR 2018</td>
@@ -493,7 +483,7 @@
 
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-with-housing" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-with-housing-tax" role="button">Continue</a>
 
       </div>
 
