--- a/app/views/citizen-truelayer/start.html
+++ b/app/views/citizen-truelayer/start.html
@@ -27,19 +27,18 @@
           Complete your legal aid financial assessment
         </h2>
 
-         <p class="govuk-body">
-          Name:    <strong>John Doe</strong><br>
-          Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
+        <p class="govuk-body">
+          Name: <strong>John Doe</strong><br> Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
 
         <p class="govuk-body">Find out if you can get legal aid because of your financial situation.</p>
 
-         <p class="govuk-body">You might not have to pay legal costs if you are on certain benefits, a low income or have little or no savings.</p>
+        <p class="govuk-body">You might not have to pay legal costs if you are on certain benefits, a low income or have little or no savings.</p>
 
         <h3>What you will need</h3>
         <p></p>
         <ul class="govuk-list govuk-list--bullet">
           <li>your National Insurance number and date of birth</li>
-          <li>your online banking details</li>
+          <li>your online banking login credentials</li>
         </ul>
 
         <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="obconsent" role="button">Start</a>
