--- a/app/views/citizen-truelayer/check-evidence.html
+++ b/app/views/citizen-truelayer/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-outgoings-housing-childcare">Back</a>
+    <a class="govuk-c-back-link" href="identify-outgoings-housing-tax-childcare">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -77,7 +77,7 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Mortgage, rent and council tax</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1420.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" scope="row">- RENT - £1200.00</td>
@@ -87,7 +87,14 @@
                     </a>
                   </td>
                 </tr>
-
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" scope="row">- COUNCIL TAX - £220.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u>
+                    </a>
+                  </td>
+                </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Childcare, maintenance and legal aid</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
