--- a/app/views/citizen-truelayer/identify-income.html
+++ b/app/views/citizen-truelayer/identify-income.html
@@ -418,22 +418,27 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Tell us about your income over the last 30 days
+          Income
         </h2>
-        <p class="govuk-body">Add relevant transactions from your bank statement(s).</p>
-                  
+
+        <h3 class="govuk-heading-m">
+          Tell us about your income over the last 30 days
+        </h3>
+
+        <p class="govuk-body">We will now list all payments into your account. Please mark which of these payments fall into the following categories.</p>
+
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
                     <span class="task-list-section-number">1. </span>Salary and pensions</h2>
-                        <p class="govuk-body"><span class="govuk-c-label__hint">
+            <p class="govuk-body"><span class="govuk-c-label__hint">
               Add any salary or wages, and income from state and private pensions
             </span></p>
 
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="select-salary">
-                        Add item
+                        Add a transaction
                 </a>
               </li>
             </ul>
@@ -441,32 +446,32 @@
           <li>
             <h2 class="task-list-section">
                     <span class="task-list-section-number">2. </span>Benefits, property and financial support</h2>
-                  <p class="govuk-body"><span class="govuk-c-label__hint">
+            <p class="govuk-body"><span class="govuk-c-label__hint">
               Add any state benefits, rental income from a property or lodger, student loans and maintenance payments
             </span></p>
             <details>
-          <summary><span class="summary">What should you tell us about?</span></summary>
+              <summary><span class="summary">What should you tell us about?</span></summary>
 
-          <div class="panel panel-border-narrow">
+              <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              <ul style="govuk">
-                <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                <li>- extra payments from your employer such as relocation costs</li>
-                <li>- board from a family member, lodger or tenant</li>
-                <li>- rent from another property</li>
-                <li>- maintenance payments</li>
-                <li>- student grant or loan</li>
-                <li>- financial support from a friend or family member</li>
-              </ul>
-            </p>
-          </div>
-        </details>
-        <br>
+                <p style="govuk-body">
+                  <ul style="govuk">
+                    <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                    <li>- extra payments from your employer such as relocation costs</li>
+                    <li>- board from a family member, lodger or tenant</li>
+                    <li>- rent from another property</li>
+                    <li>- maintenance payments</li>
+                    <li>- student grant or loan</li>
+                    <li>- financial support from a friend or family member</li>
+                  </ul>
+                </p>
+              </div>
+            </details>
+            <br>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                        Add a transaction
                       </a>
               </li>
             </ul>
