--- a/app/views/citizen-truelayer/identify-outgoings-housing-tax-childcare.html
+++ b/app/views/citizen-truelayer/identify-outgoings-housing-tax-childcare.html
@@ -397,8 +397,6 @@
   }
 </style>
 
-
-
 <div class="govuk-o-width-container">
 
   <div class="govuk-c-phase-banner">
@@ -413,7 +411,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="select-salary">Back</a>
+    <a class="govuk-c-back-link" href="select-childcare">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -421,68 +419,78 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Income
+          Outgoings
         </h2>
 
         <h3 class="govuk-heading-m">
-          Tell us about your income over the last 30 days
+          Tell us about your outgoings over the last 30 days
         </h3>
 
-        <p class="govuk-body">We will now list all payments into your account. Please mark which of these payments fall into the following categories.</p>
+        <p class="govuk-body">
+          Add relevant transactions from your bank statement(s).
+        </p>
 
         <ol class="task-list">
           <li>
-            <h2 class="task-list-section"><span class="task-list-section-number">1. </span>Salary and pensions</h2>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
+            </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add any salary or wages, and income from state and private pensions
+              Add payments for mortgage, rent, board or lodging, and council tax bills
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" aria-describedby="salary-1-completed">TYREWORLD BACS - £1800.00</a>
+                <a class="task-name" aria-describedby="housing-1-completed">
+                  RENT - £1200.00
+                </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="#">Add a transaction
+                <a class="task-name" aria-describedby="tax-1-completed">
+                    COUNCIL TAX - £220.00
+                </a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                  Add item
                 </a>
               </li>
             </ul>
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Benefits, property and financial support</h2>
+              <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
+            </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add any state benefits, rental income from a property or lodger, student loans and maintenance payments
+
+              Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions
+
             </span></p>
-            <details>
-              <summary><span class="summary">What should you tell us about?</span></summary>
-
-              <div class="panel panel-border-narrow">
-
-                <p style="govuk-body">
-                  <ul style="govuk">
-                    <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                    <li>- extra payments from your employer such as relocation costs</li>
-                    <li>- board from a family member, lodger or tenant</li>
-                    <li>- rent from another property</li>
-                    <li>- maintenance payments</li>
-                    <li>- student grant or loan</li>
-                    <li>- financial support from a friend or family member</li>
-                  </ul>
-                </p>
-              </div>
-            </details>
-            <br>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" href="select-other">Add a transaction</a>
+                <a class="task-name" aria-describedby="childcare-1-completed">
+                  WIGGLY-TOTS NURSERY - £600.00
+                </a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                  Add item
+                </a>
               </li>
             </ul>
           </li>
+
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="check-evidence" role="button">Continue</a>
 
       </div>
 
