--- a/app/views/citizen-truelayer/obconsent.html
+++ b/app/views/citizen-truelayer/obconsent.html
@@ -1,4 +1,30 @@
 {% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
+<style>
+  details summary {
+    display: inline-block;
+    color: #005ea5;
+    cursor: pointer;
+    position: relative;
+    margin-bottom: 0.26316em;
+  }
+
+  details summary:hover {
+    color: #2b8cc4;
+  }
+
+  details summary:focus {
+    outline: 3px solid #ffbf47;
+  }
+
+  details .summary {
+    text-decoration: underline;
+  }
+
+  details .arrow {
+    margin-right: .35em;
+    font-style: normal;
+  }
+</style>
 
 <div class="govuk-o-width-container">
 
@@ -21,21 +47,35 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="dwp-consent" method="get">
+        <form class="form" action="dwpdetails" method="get">
 
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Do you agree to share your details with us?</h1>
+                <h1 class="govuk-heading-xl">Do you agree to share your bank transactions with us?</h1>
               </legend>
-
-              <p class="govuk-body">Sign in safely to your online banking and give permission for us to access your bank accounts for 1 hour.</p>
 
               <p class="govuk-body">We only use your bank transactions to support your legal aid application. We do not use the information for anything else.</p>
 
-              <p class="govuk-body"><a href="#">Find out how we use and store your personal data</a></p>
+              <!--p class="govuk-body"><a href="#">Find out how we use and store your personal data</a></p-->
+
+              <details>
+                <summary><span class="summary">Find out how we use and store your personal data</span></summary>
+
+                <div class="panel panel-border-narrow">
+
+                  <p style="govuk-body">
+                    <ul style="govuk">
+                      <li>We will not have access to your online banking username and password</li>
+                      <li>We will not have any ongoing access to your bank accounts</li>
+                      <li>We will use details of your income and outgoings to assess your eligibility for legal aid</li>
+                  </p>
+                </div>
+              </details>
 
               </br>
+
+              <!--/br>
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="dwp" name="consent" value="dwp" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="dwp">
@@ -43,7 +83,8 @@
                       using my National Insurance number and date of birth
                 </label>
               </div>
-              </br>
+            </br-->
+
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="ob" name="consent" value="ob" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="ob">
