--- a/app/views/citizen-truelayer/obmultiple-yes.html
+++ b/app/views/citizen-truelayer/obmultiple-yes.html
@@ -14,30 +14,30 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="bank-success">Back</a>
+    <a class="govuk-c-back-link" href="obmultiple">Back</a>
     <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you have accounts with other banks?
+          Do you have online access to your accounts with other banks?
         </h1>
 
-        <p class="govuk-body">Share details of any accounts you have with another bank or building society.</p>
+        <p class="govuk-body">If you do not, you will need to provide paper evidence for these accounts.</p>
 
-        <form class="form" action="multibank" method="get">
+        <form class="form" action="suitable-for-ob" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="multi-bank-1" name="multibank" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="multi-bank-1">
+                <input class="govuk-c-radios__input" id="suitable-1" name="suitable" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="suitable-1">
                 Yes
               </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="multi-bank-2" name="multibank" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="multi-bank-2">
+                <input class="govuk-c-radios__input" id="suitable-2" name="suitable" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="suitable-2">
                 No
               </label>
               </div>
